--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
 		<div>
 			<img src="reglomi.jpg" alt="LOMI">
 			<div class="centerdiv">Lomi</div>
-			<button><a href="menu1.html">More</a></button>
+			<button><a href="final-menu.html">More</a></button>
 		</div>
 		<div>
 			<img src="sulitt.jpg" alt="SULIT MEAL">
 			<div class="centerdiv">Sulit Meal</div>
-			<button><a href="menu1.html">More</a></button>
+			<button><a href="final-menu.html">More</a></button>
 		</div>
 		<div>
 			<img src="salo.jpg" alt="SALO-SALO">
 			<div class="centerdiv">Salo-Salo</div>
-			<button><a href="menu1.html">More</a></button>
+			<button><a href="final-menu.html">More</a></button>
 		</div>
 		<div>
 			<img src="extra.jpg" alt="EXTRAS">
 			<div class="centerdiv">Extras</div>
-			<button><a href="menu1.html">More</a></button>
+			<button><a href="final-menu.html">More</a></button>
 		</div>
 	</div>
 <!--	<footer class="copyright">&copy; Copyright 2023 VJ Batangas Lomi</footer> -->
