--- a/about us.html
+++ b/about us.html
@@ -16,7 +16,7 @@
 		<label for="check" class="checkbtn"><i class="fas fa-bars"></i></label>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="menu1.html">Menu</a></li>
+			<li><a href="final-menu.html">Menu</a></li>
 			<li><a href="about us.html">About</a></li>
 			<li><a href="login.html">Login</a></li>
 		</ul>
